# spin-test

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
