[package]
name = "hello-rust"
authors = ["Steven Lotito <steven.lotito@gmail.com>"]
description = "Hello world using Spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "*"
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
reqwest = { version = "0.11.16", features = ["blocking"] }
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
# The Spin SDK.http = "0.2"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
wasm-bindgen-futures = "0.4.34"

[workspace]
